# pariyesana

./: .env.example  .gitignore  CLAUDE.md  NOTICE  README.md  dev.sh  docker-compose.yml  language_map.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: cluster.py  ingest.py
backend/src/pariyesana/: config.py  main.py
backend/src/pariyesana/api/: search.py
backend/src/pariyesana/models/: schemas.py
backend/src/pariyesana/services/: embedding.py  ingestion.py  metadata.py  search.py
db/: pyproject.toml
db/src/pariyesana_db/: __init__.py  connection.py  migrate.py  models.py  queries.py  tunnel.py
frontend/: Dockerfile  components.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/lib/components/: lotus-loader.svelte  search-bar.svelte  search-result-card.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
