[project]
name = "pariyesana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "numpy",
    "pariyesana-db",
    "soundfile",
]

[project.optional-dependencies]
mlx = ["mlx-audio"]
cuda = ["nemo-toolkit[asr]>=2.2.0"]

[project.scripts]
ingest = "main:ingest_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.uv.sources]
pariyesana-db = { path = "db", editable = true }
